# neuro-symbolic-astro

./: .gitignore  DESIGN.md  README.md  pyproject.toml
astroql/: __init__.py
astroql/applications/: __init__.py
astroql/applications/father_longevity/: README.md  __init__.py  analyze.py  diagnose.py  eval.py  eval_split.py
astroql/applications/father_longevity/data/: verified.json
astroql/applications/father_longevity/rules/: __init__.py  v12.py  v13.py  v14.py  v15.py  v16.py  v17.py  v18.py  (+23 more)
astroql/engine/: __init__.py  ashtakavarga.py  aspects.py  cf_engine.py  cf_math.py  cf_predict.py  dsl_evaluator.py  epoch_emitter.py  karaka.py  llm_critic.py  regression.py  shadbala.py
astroql/rules/: __init__.py  calibrated_strengths.yaml  features_schema.yaml  learned_weights.yaml  loader.py  validate_cli.py
astroql/rules/jaimini/: career.yaml  longevity.yaml  marriage.yaml
astroql/rules/kp/: longevity.yaml  marriage.yaml
astroql/rules/parashari/: career.yaml  children.yaml  education.yaml  finance.yaml  health.yaml  longevity.yaml  longevity_cf_samples.yaml  spouse.yaml
astroql/schemas/: __init__.py  birth.py  chart.py  enums.py  epoch_state.py  features.py  focus.py  results.py  rules.py  trace.py
astroql/tests/unit/: test_ashtakavarga.py  test_cf_engine.py  test_cf_math.py  test_cf_predict_exception_handling.py  test_cf_schema.py  test_correlation_groups.py  test_dsl_evaluator.py  test_dsl_round_trip.py  test_epoch_emitter.py  test_gender_and_karaka.py  test_llm_critic.py  test_rank_metrics.py  test_regression_harness.py  test_validator_hard_cases.py
