[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-symbolic-astro"
version = "0.1.0"
description = "Neuro-symbolic certainty-factor engine for classical Vedic astrology"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "amoranu" }]
keywords = ["astrology", "neuro-symbolic", "MYCIN", "certainty-factor", "Parashari", "Vedic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/amoranu/neuro-symbolic-astro"
Issues = "https://github.com/amoranu/neuro-symbolic-astro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["astroql*"]

[tool.setuptools.package-data]
"astroql.rules" = ["*.yaml"]
"astroql.applications.father_longevity.data" = ["*.json"]
